getArrayBases, reset sistema, exception si nom de nou capita ja existeix

--- a/.gitignore
+++ b/.gitignore
@@ -16130,3 +16130,20 @@
 /bin/
 /bin/
 /bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
+/bin/
